--- a/interviewer-bot.ui/src/app/features/nav-toolbar/nav-toolbar.component.html
+++ b/interviewer-bot.ui/src/app/features/nav-toolbar/nav-toolbar.component.html
@@ -1,3 +1,7 @@
 <mat-toolbar color="primary">
   <span>Interview Chatbot</span>
+  <span class="nav-spacer"></span>
+  <button mat-raised-button type="button" color="accent">
+    <mat-icon>logout</mat-icon> End Interview
+  </button>
 </mat-toolbar>
