--- a/interviewer-bot.ui/src/app/features/user-chat-input/user-chat-input.component.html
+++ b/interviewer-bot.ui/src/app/features/user-chat-input/user-chat-input.component.html
@@ -22,5 +22,6 @@
     >
       <mat-icon>send</mat-icon>
     </button>
+    <mat-hint>Time to answer <countdown #countdown [config]="countdownConfig" /></mat-hint>
   </mat-form-field>
 </form>
