--- a/interviewer-bot.ui/src/app/features/chat-ui/chat-ui.component.scss
+++ b/interviewer-bot.ui/src/app/features/chat-ui/chat-ui.component.scss
@@ -7,6 +7,7 @@
 .chat-messages {
   padding: 1rem;
   margin-bottom: 2rem;
+  margin: 0 10%;
   overflow: auto;
 }
 
@@ -14,6 +15,8 @@
   display: flex;
   justify-content: space-evenly;
   position: fixed;
+  left: 10%;
+  right: 10%;
   bottom: 0;
   width: 80%;
 }
