--- a/interviewer-bot.ui/src/app/app.component.html
+++ b/interviewer-bot.ui/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav-toolbar />
-<div class="page-content-margin">
-  <app-chat-ui />
-</div>
+<app-nav-toolbar>
+  <router-outlet></router-outlet>
+</app-nav-toolbar>
+<app-main-sidenav></app-main-sidenav>
