refactor into feature modules and lazy loading

--- a/interviewer-bot.ui/src/app/app.component.html
+++ b/interviewer-bot.ui/src/app/app.component.html
@@ -1,4 +1,2 @@
-<app-nav-toolbar>
-  <router-outlet></router-outlet>
-</app-nav-toolbar>
-<app-main-sidenav></app-main-sidenav>
+<app-nav-toolbar />
+<app-main-sidenav />
