--- a/interviewer-bot.ui/src/app/features/interview/chat-message/chat-message.component.scss
+++ b/interviewer-bot.ui/src/app/features/interview/chat-message/chat-message.component.scss
@@ -1,5 +1,5 @@
 @import "@angular/material/theming";
-@import "../../../variables.scss";
+@import "../../../../variables.scss";
 
 .message {
   border-radius: 1rem;
