minor removal of css

--- a/interviewer-bot.ui/src/app/features/interview/interview.component.html
+++ b/interviewer-bot.ui/src/app/features/interview/interview.component.html
@@ -1,4 +1,4 @@
-<div class="chat-container">
+<div>
   <div class="chat-messages">
     <div *ngFor="let message of chatMessages">
       <app-chat-message [message]="message" />
