--- a/interviewer-bot.ui/src/app/features/interview/show-results/show-results.component.html
+++ b/interviewer-bot.ui/src/app/features/interview/show-results/show-results.component.html
@@ -1,1 +1,10 @@
-<p>show-results works!</p>
+<br /><br /><br /><br /><br /><br /><br /><br />
+<div class="container" style="display: inline-flex">
+    <div class="row" style="width: 20rem;">
+    </div>
+    <div class="row">
+        <p style="align-content: center;">{{result}}</p>
+    </div>
+    <div class="row">
+    </div>
+</div>
